// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component case loading should not render the grid 1`] = `HTMLCollection []`;

exports[`App component case loading should render the loader 1`] = `
<div
  class="loader text-white fs-2"
>
  loading...
</div>
`;

exports[`App component case not loading should render the grid 1`] = `
<div
  class="state fs-2 fw-bold m-0 row"
>
  california
</div>
`;

exports[`App component case not loading should render the grid 2`] = `
<div
  class="growth m-0 row"
>
  4.44
  % growth
</div>
`;

exports[`App component case not loading should render the grid 3`] = `
<div
  class="measure d-flex justify-content-center align-items-center fs-4 col-md-auto"
>
  $
  1,000,000
</div>
`;
